--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -1,1 +1,2 @@
-﻿#configure_file ("Wall.png" ${CMAKE_BINARY_DIR} COPYONLY)
+﻿file(COPY ${CMAKE_SOURCE_DIR}/resources DESTINATION ${CMAKE_BINARY_DIR})
+#use - resources/filaName
